@@ -570,7 +570,7 @@ static const short grownups[][2] = {
 	{PM_BABY_BLACK_DRAGON, PM_BLACK_DRAGON},
 	{PM_BABY_BLUE_DRAGON, PM_BLUE_DRAGON},
 	{PM_BABY_GREEN_DRAGON, PM_GREEN_DRAGON},
-	{PM_BABY_GOLD_DRAGON, PM_GOLD_DRAGON},
+	{PM_BABY_GLOWING_DRAGON, PM_GLOWING_DRAGON},
 	{PM_BABY_YELLOW_DRAGON, PM_YELLOW_DRAGON},
 	{PM_RED_NAGA_HATCHLING, PM_RED_NAGA},
 	{PM_BLACK_NAGA_HATCHLING, PM_BLACK_NAGA},
