@@ -1273,7 +1273,11 @@ NEARDATA struct permonst mons[] = {
 	 * cannot confer intrinsics, to avoid polyself/egg abuse.
 	 *
 	 * As reptiles, dragons are cold-blooded and thus aren't seen
-	 * with infravision.  Red dragons are the exception.
+	 * with infravision.
+	 *
+	 * Note: properties of dragons are significantly modified by
+	 * dragons_init and shuffle_all ("shuffle dragon scales / scale
+	 * mails") from o_init.c.
 	 */
     MON("baby tatzelworm", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
@@ -1281,14 +1285,14 @@ NEARDATA struct permonst mons[] = {
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), 0, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_GRAY),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("baby amphitere", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), 0, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, DRAGON_SILVER),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
 #if 0	/* DEFERRED */
     MON("baby shimmering dragon", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), G_GENO,
@@ -1304,56 +1308,56 @@ NEARDATA struct permonst mons[] = {
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_FIRE, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, M3_INFRAVISIBLE, CLR_RED),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("baby lindworm", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_COLD, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_WHITE),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("baby sarkany", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_SLEEP, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_ORANGE),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("baby sirrush", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_DISINT, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BLACK),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("baby leviathan", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_ELEC, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BLUE),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("baby wyvern", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_POISON, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE|M1_POIS,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_GREEN),
-    MON("baby gold dragon", S_DRAGON,
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
+    MON("baby glowing dragon", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_FIRE, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, M3_INFRAVISIBLE, HI_GOLD),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("baby guivre", S_DRAGON,
 	LVL(12, 9, 2, 10, 0), (G_GENO),
 	A(ATTK(AT_BITE, AD_PHYS, 2, 6),
 	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
 	SIZ(1500, 500, 0, MS_ROAR, MZ_HUGE), MR_ACID|MR_STONE, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE|M1_ACID,
-	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_YELLOW),
+	M2_HOSTILE|M2_STRONG|M2_GREEDY|M2_JEWELS, 0, CLR_BROWN),
     MON("tatzelworm", S_DRAGON,
 	LVL(15, 9, -1, 20, 4), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_MAGM, 4, 6), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1362,7 +1366,7 @@ NEARDATA struct permonst mons[] = {
 	SIZ(WT_DRAGON, 1500, 0, MS_ROAR, MZ_GIGANTIC), 0, 0,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_GRAY),
+	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_BROWN),
     MON("amphitere", S_DRAGON,
 	LVL(15, 9, -1, 20, 4), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_COLD, 4, 6), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1372,7 +1376,7 @@ NEARDATA struct permonst mons[] = {
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
 	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC,
-	0, DRAGON_SILVER),
+	0, CLR_BROWN),
 #if 0	/* DEFERRED */
     MON("shimmering dragon", S_DRAGON,
 	LVL(15, 9, -1, 20, 4), (G_GENO|1),
@@ -1394,7 +1398,7 @@ NEARDATA struct permonst mons[] = {
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
 	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC,
-	M3_INFRAVISIBLE, CLR_RED),
+	0, CLR_BROWN),
     MON("lindworm", S_DRAGON,
 	LVL(15, 9, -1, 20, -5), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_COLD, 4, 6), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1403,7 +1407,7 @@ NEARDATA struct permonst mons[] = {
 	SIZ(WT_DRAGON, 1500, 0, MS_ROAR, MZ_GIGANTIC), MR_COLD, MR_COLD,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_WHITE),
+	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_BROWN),
     MON("sarkany", S_DRAGON,
 	LVL(15, 9, -1, 20, 5), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_SLEE, 4,25), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1413,7 +1417,7 @@ NEARDATA struct permonst mons[] = {
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
 	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC,
-	0, CLR_ORANGE),
+	0, CLR_BROWN),
     MON("sirrush", S_DRAGON,
 	LVL(15, 9, -1, 20, -6), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_DISN, 4,10), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1422,7 +1426,7 @@ NEARDATA struct permonst mons[] = {
 	SIZ(WT_DRAGON, 1500, 0, MS_ROAR, MZ_GIGANTIC), MR_DISINT, MR_DISINT,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_BLACK),
+	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_BROWN),
     MON("leviathan", S_DRAGON,
 	LVL(15, 9, -1, 20, -7), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_ELEC, 4, 6), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1431,7 +1435,7 @@ NEARDATA struct permonst mons[] = {
 	SIZ(WT_DRAGON, 1500, 0, MS_ROAR, MZ_GIGANTIC), MR_ELEC, MR_ELEC,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
-	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_BLUE),
+	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_BROWN),
     MON("wyvern", S_DRAGON,
 	LVL(15, 9, -1, 20, 6), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_DRST, 4, 6), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1440,8 +1444,8 @@ NEARDATA struct permonst mons[] = {
 	SIZ(WT_DRAGON, 1500, 0, MS_ROAR, MZ_GIGANTIC), MR_POISON, MR_POISON,
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE|M1_POIS,
-	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_GREEN),
-    MON("gold dragon", S_DRAGON,
+	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC, 0, CLR_BROWN),
+    MON("glowing dragon", S_DRAGON,
 	LVL(15, 9, -1, 20, -4), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_FIRE, 6, 6), ATTK(AT_BITE, AD_PHYS, 3, 8),
 	  ATTK(AT_CLAW, AD_PHYS, 1, 4), ATTK(AT_CLAW, AD_PHYS, 1, 4),
@@ -1450,7 +1454,7 @@ NEARDATA struct permonst mons[] = {
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE,
 	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC,
-	M3_INFRAVISIBLE, HI_GOLD),
+	0, CLR_BROWN),
     MON("guivre", S_DRAGON,
 	LVL(15, 9, -1, 20, 7), (G_GENO|1),
 	A(ATTK(AT_BREA, AD_ACID, 4, 6), ATTK(AT_BITE, AD_PHYS, 3, 8),
@@ -1461,7 +1465,7 @@ NEARDATA struct permonst mons[] = {
 	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_SEE_INVIS|M1_OVIPAROUS|
 	  M1_CARNIVORE|M1_ACID,
 	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC,
-	0, CLR_YELLOW),
+	0, CLR_BROWN),
     MON("chromatic dragon", S_DRAGON,
 	LVL(16, 10, 0, 25, 0), (G_NOGEN),
 	A(ATTK(AT_BREA, AD_RBRE, 6, 8), ATTK(AT_BITE, AD_PHYS, 4, 8),
