@@ -493,13 +493,22 @@ dragons_init()
 		baby_tmp[i].mname  = mons[i+PM_BABY_GRAY_DRAGON].mname;
 		baby_tmp[i].mcolor = mons[i+PM_BABY_GRAY_DRAGON].mcolor;
 	}
-	/* copy name and color to new positions */
+	/* copy name to new positions */
 	for (i=0; i < ndragons; i++) {
 		j = objects[i+GRAY_DRAGON_SCALES].oc_descr_idx-GRAY_DRAGON_SCALES;
 		mons[i+PM_GRAY_DRAGON].mname  = tmp[j].mname;
-		mons[i+PM_GRAY_DRAGON].mcolor = tmp[j].mcolor;
 		mons[i+PM_BABY_GRAY_DRAGON].mname  = baby_tmp[j].mname;
-		mons[i+PM_BABY_GRAY_DRAGON].mcolor = baby_tmp[j].mcolor;
+	}
+	/* assign colors, brown for unidentified dragons */
+	for (i=0; i < ndragons; i++) {
+	    if (objects[i+GRAY_DRAGON_SCALES].oc_name_known) { /* we know this dragon type */
+		identify_dragon(i);
+	    } else {
+		mons[i+PM_GRAY_DRAGON].mcolor = CLR_BROWN;
+		mons[i+PM_BABY_GRAY_DRAGON].mcolor = CLR_BROWN;
+		objects[i + GRAY_DRAGON_SCALES].oc_color = CLR_BROWN;
+		objects[i + GRAY_DRAGON_SCALE_MAIL].oc_color = CLR_BROWN;
+	    }
 	}
 }
 
