@@ -1150,7 +1150,7 @@ begin_burn(obj, already_lit)
 		    obj->lamplit = 1;
 		    do_timer = FALSE;
 		    radius = 2;
-		} else if (Is_gold_dragon_armor(obj->otyp)) {
+		} else if (Is_glowing_dragon_armor(obj->otyp)) {
 			obj->lamplit = 1;
 			do_timer = FALSE;
 		} else {
