@@ -1762,7 +1762,7 @@ P = (108, 145, 182)
   MMMMMMMMMMMMMMMM
   MMMMMMMMMMMMMMMM
 }
-# tile 435 (gold dragon scale mail / stone dragon scale mail)
+# tile 435 (gold dragon scale mail, now called glowing dragon / stone dragon scale mail)
 {
   MMMMMMMMMMMMMMMM
   MMMMMMMMMMMMMMMM
@@ -1990,7 +1990,7 @@ P = (108, 145, 182)
   MMMMMMMMMMMMMMMM
   MMMMMMMMMMMMMMMM
 }
-# tile 436 (gold dragon scales / stone dragon scales)
+# tile 436 (gold dragon scales, now called glowing dragon / stone dragon scales)
 {
   MMMMMMMMMMMMMMMM
   MMMMMMMMMMMMMMMM
